--- a/main.csproj
+++ b/main.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp6.0</TargetFramework>
-		<StartupObject>MainClass</StartupObject>
+		<StartupObject>Aula5</StartupObject>
   </PropertyGroup>
 
 </Project>
